# cursor-agent-beacon

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  setup.sh
.cursor/: hooks.json
.cursor/hooks/: hook-handler.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: hardware.env.example
docs/: architecture.md  design-notes.es.md  display-themes.md  getting-started.md  gnome-panel.md  hardware-viewe.md  hooks.md  roadmap.md
examples/: hooks.minimal.json
examples/sample-events/: after_agent_thought.json  after_file_edit.json  before_shell_execution.json  post_tool_use_permission_denied.json  pre_compact.json  stop_completed.json
firmware/viewe/: README.md  protocol.cpp  protocol.h
firmware/viewe/cursor_agent_beacon/: cursor_agent_beacon.ino
gnome-extension/: extension.js  metadata.json  stylesheet.css
gnome-extension/schemas/: org.gnome.shell.extensions.cursor-status-panel.gschema.xml
packaging/: cursor-agent-beacon-bridge.service
preview/: README.md  beacon-sprites.js  display-simulator.html
scripts/: build_character_sprites.py  export_firmware_assets.py  export_standard_gifs.py  fake_serial_device.py  generate_pixel_faces.py  install-desktop.sh  install-gnome-panel.sh  install-user-hooks.sh  prepare_theme_gifs.py  simulate_hook.py
src/cursor_agent_beacon/: __init__.py  cli.py  compat.py  config.py  doctor.py  handler.py  hooks.py  install.py  mapper.py  models.py  paths.py  protocol.py  response.py  session_registry.py  setup.py  theme.py
src/cursor_agent_beacon/bridge/: __init__.py  config.py  (+3 more)
tests/: test_bridge.py  test_bridge_server.py  test_cli.py  test_cli_module.py  test_config.py  test_doctor.py  test_handler.py  test_hooks.py  test_http_sink.py  test_install.py  test_integration.py  test_log_sink.py  test_mapper.py  test_mapper_hooks.py  test_paths.py  test_protocol.py  test_session_registry.py  test_setup.py  test_setup_smoke.py  test_sinks.py  test_theme.py  test_theme_assets.py
themes/: README.md
themes/custom/: README.md
themes/standard/: ASSETS.md  ATTRIBUTION.md  manifest.json  pixel-faces.json
(+6 files in other folders)
