[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-agent-beacon"
version = "0.3.1"
description = "Deterministic Cursor agent status monitoring via native hooks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cursor-agent-beacon contributors" }]
keywords = ["cursor", "hooks", "agent", "monitoring", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
bridge = ["pyserial>=3.5"]
export = ["Pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "Pillow>=10.0", "ruff>=0.9", "pyright>=1.1"]

[project.scripts]
cursor-agent-beacon = "cursor_agent_beacon.cli:main"

[project.urls]
Homepage = "https://github.com/suribe06/cursor-agent-beacon"
Documentation = "https://github.com/suribe06/cursor-agent-beacon#readme"
Issues = "https://github.com/suribe06/cursor-agent-beacon/issues"
Repository = "https://github.com/suribe06/cursor-agent-beacon"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_agent_beacon"]

[tool.hatch.build.targets.wheel.force-include]
"themes" = "cursor_agent_beacon/themes"
"gnome-extension" = "cursor_agent_beacon/vendor/gnome-extension"

[tool.hatch.build.targets.sdist]
include = ["src/cursor_agent_beacon", "themes", "gnome-extension", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: end-to-end install smoke tests (runs pip install via setup.sh)",
]

[tool.coverage.run]
source = ["cursor_agent_beacon"]

[tool.coverage.report]
fail_under = 75

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"scripts/**" = ["E402", "B904"]
